--- a/src/app/pages/onboarding/dealerOnboarding/all-dealer/all-dealer.component.html
+++ b/src/app/pages/onboarding/dealerOnboarding/all-dealer/all-dealer.component.html
@@ -1,1 +1,39 @@
-<p>all-dealer works!</p>
+<br>
+<!-- ADMIN Login accessGroupId 7 -->
+<div *ngIf="isAdmin">
+    <ul ngbNav #dashboard="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
+      <li [ngbNavItem]="1">
+        <a ngbNavLink>
+          <span class="d-none d-sm-block" style="font-size: 15px;">ALL </span>
+        </a>
+        <ng-template ngbNavContent>
+            <app-tables-widget17 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget17>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="2">
+        <a ngbNavLink>
+          <span class="d-none d-sm-block" style="font-size: 15px;">FUELIN PRIME </span>
+        </a>
+        <ng-template ngbNavContent>
+            <app-tables-widget18 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget18>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="3">
+        <a ngbNavLink>
+          <span class="d-none d-sm-block" style="font-size: 15px;">LITE DEALER</span>
+        </a>
+        <ng-template ngbNavContent>
+          <app-demo-removed></app-demo-removed>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="3">
+        <a ngbNavLink>
+          <span class="d-none d-sm-block" style="font-size: 15px;">SMS</span>
+        </a>
+        <ng-template ngbNavContent>
+          <app-demo-removed></app-demo-removed>
+        </ng-template>
+      </li>
+    </ul>
+    <div [ngbNavOutlet]="dashboard"></div>
+  </div>
