--- a/src/app/pages/onboarding/dealerOnboarding/dealer-lists/dealer-lists.component.html
+++ b/src/app/pages/onboarding/dealerOnboarding/dealer-lists/dealer-lists.component.html
@@ -1,31 +1,1 @@
-
-<!-- ADMIN Login accessGroupId 7 -->
-<div *ngIf="isAdmin">
-    <ul ngbNav #dashboard="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
-      <li [ngbNavItem]="1">
-        <a ngbNavLink>
-          <span class="d-none d-sm-block" style="font-size: 15px;">DEALER LIST</span>
-        </a>
-        <ng-template ngbNavContent>
-          <app-all-dealer></app-all-dealer>
-        </ng-template>
-      </li>
-      <li [ngbNavItem]="2">
-        <a ngbNavLink>
-          <span class="d-none d-sm-block" style="font-size: 15px;">REQUEST </span>
-        </a>
-        <ng-template ngbNavContent>
-          <app-demo-removed></app-demo-removed>
-        </ng-template>
-      </li>
-      <!-- <li [ngbNavItem]="3">
-        <a ngbNavLink>
-          <span class="d-none d-sm-block" style="font-size: 15px;">DEMO/REMOVED</span>
-        </a>
-        <ng-template ngbNavContent>
-          <app-request></app-request>
-        </ng-template>
-      </li> -->
-    </ul>
-    <div [ngbNavOutlet]="dashboard"></div>
-  </div>
+<p>dealer-lists works!</p>
