--- a/src/app/pages/dashboard/admin dashboard/dashboard4/dashboard4.component.html
+++ b/src/app/pages/dashboard/admin dashboard/dashboard4/dashboard4.component.html
@@ -4,3 +4,9 @@
         <app-tables-widget15 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget15>
     </div>
 </div>
+
+<div class="card-header border-0 pt-5">
+    <div>
+        <app-tables-widget16 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget16>
+    </div>
+</div>
