Changes added by PRAMOD

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -853,7 +853,7 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/reports">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/activityCount">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -862,7 +862,7 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/reports">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/gstDetails">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -871,7 +871,8 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/reports">
+
+        <!-- <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/reports">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -924,7 +925,8 @@
             <span class="menu-title">SMS Alert
             </span>
           </span>
-        </div>
+        </div> -->
+
       </div>
     </div>
 
