--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget6/stats-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget6/stats-widget6.component.html
@@ -1,24 +1,103 @@
-<div class="card-body my-3">
-  <a
-    href="#"
-    class="card-title fw-bolder fs-5 mb-3 d-block"
-    [ngClass]="'text-' + color"
-  >
-    {{ description }}
-  </a>
+<style>
+  .table {
+    border: 1px solid #272829;
 
-  <div class="py-1">
-    <span class="text-gray-900 fs-1 fw-bolder me-2">{{ progress }}</span>
+    thead {
+      background-color: rgb(255, 192, 0);
 
-    <span class="fw-bold text-muted fs-7">{{ title }}</span>
-  </div>
+      th {
+        border: 1px solid #272829;
+      }
+    }
 
-  <div class="`progress h-7px bg-opacity-50 mt-7" [ngClass]="'bg-' + color">
-    <div
-      class="progress-bar"
-      [ngClass]="' bg-' + color"
-      [style.width]="progress"
-      role="progressbar"
-    ></div>
+    td {
+      border: 1px solid #272829;
+    }
+  }
+</style>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-body">
+          <form [formGroup]="gstForm">
+            <div class="row">
+              <div class="col col-xl-4 col-lg-4"></div>
+              <div class="col col-xl-4 col-lg-4">
+                <div class="card-body table-responsive">
+                  <table class="table table-hover table-striped">
+                    <thead>
+                      <tr>
+                        <th style="text-align: center;"> gst % </th>
+                        <th style="text-align: center;"> gst info </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td style="text-align: center;">
+                          <input type="number" class="form-control" formControlName="gst" style="text-align: center;"
+                            placeholder="GST %" />
+                        </td>
+                        <td style="text-align: center;">
+                          <input type="text" class="form-control" formControlName="gstInfo" style="text-align: center;"
+                            placeholder="GST details" />
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="row">
+            <div class="col col-xl-12 col-lg-12">
+              <div class="row">
+                <div class="col-md-5">
+                </div>
+                <div class="col-auto">
+                  <button *ngIf="isUpdate" type="submit" class="btn btn-outline-warning my-2 my-sm-0"
+                    (click)=updateGSTDetails()>Update</button>
+                  <button *ngIf="!isUpdate" type="submit" class="btn btn-outline-success my-2 my-sm-0"
+                    (click)=addGSTDetails()>Submit</button>
+                </div>
+                <div class="col-auto">
+                  <button type="submit" class="btn btn-danger" (click)=clearGSTDetails()>Cancel</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br>
+          <hr>
+          <div class="row">
+            <div class="col col-xl-3 col-lg-3"></div>
+            <div class="col col-xl-6 col-lg-6">
+              <table class="table table-hover table-striped">
+                <thead>
+                  <tr>
+                    <th style="text-align: center;"> sr no </th>
+                    <th style="text-align: center;"> gst % </th>
+                    <th style="text-align: center;"> gst info </th>
+                    <th style="text-align: center;"> update </th>
+                  </tr>
+                </thead>
+                <tbody *ngFor="let data of gstDetails; let i = index;">
+                  <tr>
+                    <td style="text-align: center;"> {{i + 1}} </td>
+                    <td style="text-align: center;"> {{data.gst}} </td>
+                    <td style="text-align: center;"> {{data.gstDetailsInfo}} </td>
+                    <td style="text-align: center;">
+                      <i style="color:#138496;cursor:pointer;" class="fas fa-edit"
+                        (click)="getGSTDetailsById(data.gstDetailsId)"></i>
+                      /
+                      <i style="color:red" class="fa fa-ban" (click)="deleteGSTDetails(data.gstDetailsId)"></i>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
