--- a/src/app/pages/admin/activity-count/activity-count.component.html
+++ b/src/app/pages/admin/activity-count/activity-count.component.html
@@ -7,7 +7,7 @@
             <span class="d-none d-sm-block" style="font-size: 15px;">PORTAL</span>
         </a>
         <ng-template ngbNavContent>
-            <!-- <app-stats-widget2></app-stats-widget2> -->
+            <ng-template [ngTemplateOutlet]="portal"></ng-template>
         </ng-template>
     </li>
     <li [ngbNavItem]="2">
@@ -15,7 +15,7 @@
             <span class="d-none d-sm-block" style="font-size: 15px;">APP</span>
         </a>
         <ng-template ngbNavContent>
-            <!-- <app-stats-widget3></app-stats-widget3> -->
+            <ng-template [ngTemplateOutlet]="app"></ng-template>
         </ng-template>
     </li>
     <li [ngbNavItem]="3">
@@ -28,3 +28,49 @@
     </li>
 </ul>
 <div [ngbNavOutlet]="activityCount"></div>
+
+
+
+<ng-template #portal>
+    <ul ngbNav #activityCountPortal="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
+        <li [ngbNavItem]="1">
+            <a ngbNavLink>
+                <span class="d-none d-sm-block" style="font-size: 15px;">PORTAL</span>
+            </a>
+            <ng-template ngbNavContent>
+                <app-count-dealer></app-count-dealer>
+            </ng-template>
+        </li>
+        <li [ngbNavItem]="2">
+            <a ngbNavLink>
+                <span class="d-none d-sm-block" style="font-size: 15px;">APP</span>
+            </a>
+            <ng-template ngbNavContent>
+                <app-count-transporter></app-count-transporter>
+            </ng-template>
+        </li>
+    </ul>
+    <div [ngbNavOutlet]="activityCountPortal"></div>
+</ng-template>
+
+<ng-template #app>
+    <ul ngbNav #activityCountApp="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
+        <li [ngbNavItem]="1">
+            <a ngbNavLink>
+                <span class="d-none d-sm-block" style="font-size: 15px;">PORTAL</span>
+            </a>
+            <ng-template ngbNavContent>
+                <app-count-dealer></app-count-dealer>                
+            </ng-template>
+        </li>
+        <li [ngbNavItem]="2">
+            <a ngbNavLink>
+                <span class="d-none d-sm-block" style="font-size: 15px;">APP</span>
+            </a>
+            <ng-template ngbNavContent>
+                <app-count-transporter></app-count-transporter>
+            </ng-template>
+        </li>
+    </ul>
+    <div [ngbNavOutlet]="activityCountApp"></div>
+</ng-template>
