--- a/src/app/pages/admin/activity-count/activity-count.component.html
+++ b/src/app/pages/admin/activity-count/activity-count.component.html
@@ -7,7 +7,7 @@
             <span class="d-none d-sm-block" style="font-size: 15px;">PORTAL</span>
         </a>
         <ng-template ngbNavContent>
-            <ng-template [ngTemplateOutlet]="portal"></ng-template>
+            <!-- <ng-template [ngTemplateOutlet]="portal"></ng-template> -->
         </ng-template>
     </li>
     <li [ngbNavItem]="2">
@@ -15,7 +15,7 @@
             <span class="d-none d-sm-block" style="font-size: 15px;">APP</span>
         </a>
         <ng-template ngbNavContent>
-            <ng-template [ngTemplateOutlet]="app"></ng-template>
+            <!-- <ng-template [ngTemplateOutlet]="app"></ng-template> -->
         </ng-template>
     </li>
     <li [ngbNavItem]="3">
@@ -31,7 +31,7 @@
 
 
 
-<ng-template #portal>
+<!-- <ng-template #portal>
     <ul ngbNav #activityCountPortal="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
         <li [ngbNavItem]="1">
             <a ngbNavLink>
@@ -73,4 +73,4 @@
         </li>
     </ul>
     <div [ngbNavOutlet]="activityCountApp"></div>
-</ng-template>
+</ng-template> -->
