changes added by tejaswini

--- a/src/app/pages/onboarding/dealerOnboarding/all-dealer/all-dealer.component.html
+++ b/src/app/pages/onboarding/dealerOnboarding/all-dealer/all-dealer.component.html
@@ -23,15 +23,15 @@
           <span class="d-none d-sm-block" style="font-size: 15px;">LITE DEALER</span>
         </a>
         <ng-template ngbNavContent>
-          <app-demo-removed></app-demo-removed>
+          <app-tables-widget19 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget19>
         </ng-template>
       </li>
-      <li [ngbNavItem]="3">
+      <li [ngbNavItem]="4">
         <a ngbNavLink>
           <span class="d-none d-sm-block" style="font-size: 15px;">SMS</span>
         </a>
         <ng-template ngbNavContent>
-          <app-demo-removed></app-demo-removed>
+          <app-tables-widget20 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget20>
         </ng-template>
       </li>
     </ul>
