Changes added by PRAMOD

--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget1/advance-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget1/advance-tables-widget1.component.html
@@ -1,4 +1,17 @@
-<br>
+<style>
+  .table{
+    thead{
+        th{
+            text-align: left;
+        }
+    }
+    td{
+        text-align: left;
+
+    }
+}
+</style>
+
 <form [formGroup]="filterCustomerList">
   <div class="row">
     <div class="col-md-3">
