--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget3/advance-tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget3/advance-tables-widget3.component.html
@@ -1,3 +1,17 @@
+<style>
+  .table{
+    thead{
+        th{
+            text-align: left;
+        }
+    }
+    td{
+        text-align: left;
+
+    }
+}
+</style>
+
 <form [formGroup]="filterVehicleList">
   <div class="row">
     <div class="col-md-3">
