--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget2/advance-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget2/advance-tables-widget2.component.html
@@ -72,7 +72,7 @@
         <td> {{data.vishUserFirstName}} {{data.vishUserLastName}} </td>
         <td> {{data.vishUserMobile}} </td>
         <td> {{data.vishUserMail}} </td>
-        <td style="color: blue;" [routerLink]="['/admin/fastagVehicleDetails', data.vishUserId]"> {{data.vehicleSum}}
+        <td style="color: blue;" [routerLink]="['/new_Viswasa/ftVehicle', data.vishUserId]"> {{data.vehicleSum}}
         </td>
       </tr>
     </tbody>
