changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -668,7 +668,7 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/addFuelPartner">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -677,7 +677,7 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/fuelProductMaster">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
