changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -686,12 +686,12 @@
             </span>
           </span>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/referral">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
-            <span class="menu-title">Delete Modal
+            <span class="menu-title">Referral 
             </span>
           </span>
         </div>
