--- a/src/app/pages/admin/fuel-product-master/fuel-product-master.component.html
+++ b/src/app/pages/admin/fuel-product-master/fuel-product-master.component.html
@@ -1,1 +1,4 @@
-<p>fuel-product-master works!</p>
+<div class="card-header">
+    <b>View Fuel Product Master</b>
+</div>
+<app-tables-widget26></app-tables-widget26> 
