--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget13/tables-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget13/tables-widget13.component.html
@@ -2,14 +2,9 @@
 <div class="card-header border-0 pt-5">
   <h3 class="card-title align-items-start flex-column">
     <div>
-      <span class="card-label fw-bolder fs-5 mb-1">Select Petrol Pump</span>
-      <span class="badge badge-light-success fs-6 fw-bolder">
-        <input class="form-control" type="text" list="dealerList" placeholder="Select Pump Name"
-          (change)="getDetailsByCustomerMapName($event)">
-        <datalist id="dealerList">
-          <option *ngFor="let data of dealerList" [value]="data.companyName">
-        </datalist>
-      </span>
+      <input class="form-control" type="text" (input)="onSearch()" placeholder="Search" [(ngModel)]="searchData"
+        [ngModelOptions]="{standalone: true}">
+      <i class="bx bx-search-alt search-icon"></i>
     </div>
   </h3>
 </div>
@@ -37,106 +32,23 @@
       </thead>
       <!-- end::Table head -->
       <!-- begin::Table body -->
-      <tbody>
+      <tbody *ngFor="let data of allDealerDetails ; let i = index">
         <tr>
-          <td>
-            <div class="d-flex align-items-center">
-              <div class="d-flex justify-content-start flex-column">
-                <span class="badge badge-light-primary fs-7 fw-bold">ABC PETROLEUM</span>
-              </div>
-            </div>
+          <td> {{data.pumpName}} </td>
+          <td> {{data.allCustCount}}
           </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+          <td> {{data.activeCustCount}}
           </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+          <td> {{data.managerCount}}
           </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
+          <td> {{data.operatorCount}}
           </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
+          <td> {{data.posCount}} </td>
+          <td> {{data.tankCount}} </td>
+          <td> {{data.pumpCount}} </td>
+          <td> {{data.nzCount}} </td>
         </tr>
-        <tr>
-          <td>
-            <div class="d-flex align-items-center">
-              <div class="d-flex justify-content-start flex-column">
-                <span class="badge badge-light-primary fs-7 fw-bold">BK PETROLEUM</span>
-              </div>
-            </div>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="d-flex align-items-center">
-              <div class="d-flex justify-content-start flex-column">
-                <span class="badge badge-light-primary fs-7 fw-bold">SK PETROLEUM</span>
-              </div>
-            </div>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-          <td>
-            <span class="badge badge-light-primary fs-7 fw-bold">0.00</span>
-          </td>
-        </tr>
+
       </tbody>
       <!-- end::Table body -->
     </table>
