--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -929,6 +929,70 @@
 
       </div>
     </div>
+    
+    <!-- DELETE MODAL -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">DELETE MODAL
+        </span>
+        <span class="menu-arrow"></span>
+      </span>
+      <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
+        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">Fuelin
+            </span>
+            <span class="menu-arrow"></span>
+          </span>
+          <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
+            <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+              <span class="menu-link">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+                <span class="menu-title">Credit/Payment
+                </span>
+              </span>
+            </div>
+            <div class="menu-item menu-accordion" routerLinkActive="here show"
+              data-kt-menu-trigger="click">
+              <span class="menu-link">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+                <span class="menu-title">DSR
+                </span>
+              </span>
+            </div>
+            <div class="menu-item menu-accordion" routerLinkActive="here show" 
+              data-kt-menu-trigger="click">
+              <span class="menu-link">
+                <span class="menu-bullet">
+                  <span class="bullet bullet-dot"></span>
+                </span>
+                <span class="menu-title">Fuel Price
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">Fastag
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
 
     
     <br><br><br><br>
